# ygo-helpers

./: README.md  cmp_repos.py  crawl_yugipedia.py  parse_wikitext.py  pyproject.toml  test_translate.py  translate.py
data/: 135598  single_from_wikitext.json
