[tool.poetry]
name = "ygo-helpers"
version = "0.1.0"
description = ""
authors = ["dueltech <ygodueltech@gmail.com>"]
license = "n"

[tool.poetry.dependencies]
python = "^3.7.1"
click = "^8.0.1"
requests = "^2.25.1"
networkx = "^2.5.1"
matplotlib = "^3.4.2"
pandas = "^1.2.4"
tqdm = "^4.61.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"
ipdb = "^0.13.7"
pylint = "^2.8.2"
black = "^21.5b1"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
